// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon component should apply custom disabled styles 1`] = `
<Component>
  <TouchableHighlight
    activeOpacity={0.85}
    delayPressOut={100}
    disabled={true}
    onPress={[MockFunction]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "pink",
        "justifyContent": "center",
      }
    }
    underlayColor="white"
  >
    <Icon
      allowFontScaling={false}
      color="black"
      name="wifi"
      size={24}
      style={
        Object {
          "backgroundColor": "transparent",
        }
      }
    />
  </TouchableHighlight>
</Component>
`;

exports[`Icon component should apply default disabled styles 1`] = `
<Component>
  <TouchableHighlight
    activeOpacity={0.85}
    delayPressOut={100}
    disabled={true}
    onPress={[MockFunction]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#D1D5D8",
        "justifyContent": "center",
      }
    }
    underlayColor="white"
  >
    <Icon
      allowFontScaling={false}
      color="black"
      name="wifi"
      size={24}
      style={
        Object {
          "backgroundColor": "transparent",
        }
      }
    />
  </TouchableHighlight>
</Component>
`;

exports[`Icon component should render with icon type 1`] = `
<Component>
  <Component
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "red",
        "borderRadius": 28,
        "height": 52,
        "justifyContent": "center",
        "margin": 7,
        "width": 52,
      }
    }
    underlayColor="red"
  >
    <Icon
      allowFontScaling={false}
      color="white"
      name="alert"
      size={24}
      style={
        Object {
          "backgroundColor": "peru",
        }
      }
    />
  </Component>
</Component>
`;

exports[`Icon component should render without issues 1`] = `
<Component>
  <Component
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "justifyContent": "center",
      }
    }
    underlayColor="white"
  >
    <Icon
      allowFontScaling={false}
      color="black"
      name="wifi"
      size={24}
      style={
        Object {
          "backgroundColor": "transparent",
        }
      }
    />
  </Component>
</Component>
`;
